[package]
name = "etherbot"
authors = ["Kosta S."]
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
etherscan = { path = "../Etherscan" }
serde_json = "1.0.68"
serenity = { version = "0.10.9", features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.11.0", features = ["macros", "rt-multi-thread"] }
